crates/lang/tests/ui/trait_def/pass/with_namespace.rs
use ink_lang as ink;

#[ink::trait_definition(namespace = "my_trait_namespace")]
pub trait WithNamespace {
    #[ink(message)]
    fn message(&self);
}

fn main() {}
